# linuxpet

./: Cargo.toml  README.md  config.rs  fish.rs  font.rs  gen.py  plugin.rs  renderer.rs  setup.fish  stats.rs
pet/: cat.rs  mod.rs
src/: font.rs  main.rs  plugin.rs  renderer.rs  stats.rs
src/pet/: cat.rs  dog.rs  fish.rs  mod.rs
